--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -24,46 +24,44 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Environment
         run:  bundle install
-      - name: Test Release
-        run:  bundle exec fastlane create_release
-      # - name: Start SwiftUI & UIKit tests
-      #   run:  bundle exec fastlane run_all_tests
-      # - name: Check If Failed
-      #   if: ${{ failure() }}
-      #   run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
-      # - name: Deploy AppCenter Dev
-      #   if: ${{ github.event_name == 'pull_request' }}
-      #   env:     
-      #     CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
-      #   run: |
-      #     bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
-      #     bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }} pull_request_number:${{ github.event.number }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID"
-      # - name: Check If Failed
-      #   if: ${{ failure() }}
-      #   run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
-      # - name: Deploy AppCenter Prod
-      #   if: ${{ github.event_name == 'push' }}
-      #   env:     
-      #     CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
-      #   run: |
-      #     bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
-      #     bundle exec fastlane deploy_appcenter_prod
-      # - name: Check If Failed
-      #   if: ${{ failure() }}
-      #   run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
-      # - name: Build XCFrameworks
-      #   if: ${{ github.event_name == 'push' }}
-      #   run: bundle exec fastlane build_git_packages
-      # - name: Upload Artifacts
-      #   if: ${{ github.event_name == 'push' }}
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: Artifacts
-      #     path: |
-      #       Products/xcframeworks/AdmiralSwiftUI.xcframework
-      #       Products/xcframeworks/AdmiralUIKit.xcframework
-      #       Products/xcframeworks/AdmiralTheme.xcframework
-      #       Products/xcframeworks/AdmiralUIResources.xcframework
+      - name: Start SwiftUI & UIKit tests
+        run:  bundle exec fastlane run_all_tests
+      - name: Check If Failed
+        if: ${{ failure() }}
+        run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
+      - name: Deploy AppCenter Dev
+        if: ${{ github.event_name == 'pull_request' }}
+        env:     
+          CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
+        run: |
+          bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
+          bundle exec fastlane deploy_appcenter_dev issue_name:${{ github.head_ref }} pull_request_number:${{ github.event.number }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID"
+      - name: Check If Failed
+        if: ${{ failure() }}
+        run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
+      - name: Deploy AppCenter Prod
+        if: ${{ github.event_name == 'push' }}
+        env:     
+          CI_PASSWORD:  ${{ secrets.CI_PASSWORD }}
+        run: |
+          bundle exec fastlane unlock_secrets_keychain password:"$CI_PASSWORD"
+          bundle exec fastlane deploy_appcenter_prod
+      - name: Check If Failed
+        if: ${{ failure() }}
+        run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
+      - name: Build XCFrameworks
+        if: ${{ github.event_name == 'push' }}
+        run: bundle exec fastlane build_git_packages
+      - name: Upload Artifacts
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Artifacts
+          path: |
+            Products/xcframeworks/AdmiralSwiftUI.xcframework
+            Products/xcframeworks/AdmiralUIKit.xcframework
+            Products/xcframeworks/AdmiralTheme.xcframework
+            Products/xcframeworks/AdmiralUIResources.xcframework
 
   Push-To-Bitbucket:
     runs-on: [ self-hosted, main ]
