--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -65,7 +65,9 @@ jobs:
             Products/xcframeworks/AdmiralUIKit.xcframework
             Products/xcframeworks/AdmiralTheme.xcframework
             Products/xcframeworks/AdmiralUIResources.xcframework
-
-
-
+        - name: Validate Depenecy Managers
+        if: ${{ github.event_name == 'pull_request'}}
+        run: bundle exec fastlane validate_depenecy_managers
+        if: ${{ failure() }}
+        run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
 
