--- a/Examples/ExampleCocoaPods/Podfile
+++ b/Examples/ExampleCocoaPods/Podfile
@@ -6,9 +6,9 @@ target 'ExampleCocoaPods' do
   use_frameworks!
 
   # Pods for ExampleCocoaPods
-  pod 'AdmiralUIKit', :git => '', :branch => 'master'
-  pod 'AdmiralTheme', :git => '', :branch => 'master'
-  pod 'AdmiralUIResources', :git => '', :branch => 'master'
-  pod 'AdmiralSwiftUI', :git => '', :branch => 'master'
+	pod 'AdmiralTheme', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
+	pod 'AdmiralUIResources', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
+	pod 'AdmiralSwiftUI', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
+	pod 'AdmiralUIKit', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
 
 end
