--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -72,6 +72,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Artifacts
+          if: ${{ github.event_name == 'push' }}
           path: |
             Products/xcframeworks/AdmiralSwiftUI.xcframework
             Products/xcframeworks/AdmiralUIKit.xcframework
