--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -71,6 +71,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
+          if: ${{ github.event_name == 'push' }}
           name: Artifacts
           path: |
             Products/xcframeworks/AdmiralSwiftUI.xcframework
