--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -34,7 +34,7 @@ jobs:
         if: ${{ failure() }}
         run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
       - name: Start SwiftUI & UIKit UI tests
-        if: startsWith(github.ref, 'refs/heads/rc/') || github.event_name == 'push'
+        if: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main' }}
         run: bundle exec fastlane run_all_ui_tests
       - name: Check If Failed
         if: ${{ failure() }}
