--- a/Examples/ExampleCocoaPods/Podfile
+++ b/Examples/ExampleCocoaPods/Podfile
@@ -6,10 +6,10 @@ target 'ExampleCocoaPods' do
   use_frameworks!
 
   # Pods for ExampleCocoaPods
-  pod 'AdmiralTheme', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
-  pod 'AdmiralUIResources', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
-  pod 'AdmiralCore', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
-  pod 'AdmiralSwiftUI', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
-  pod 'AdmiralUIKit', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'main'
+  pod 'AdmiralTheme', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'feature/TECH-fix-SPM-test-version'
+  pod 'AdmiralUIResources', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'feature/TECH-fix-SPM-test-version'
+  pod 'AdmiralCore', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'feature/TECH-fix-SPM-test-version'
+  pod 'AdmiralSwiftUI', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'feature/TECH-fix-SPM-test-version'
+  pod 'AdmiralUIKit', :git => 'https://github.com/admiral-team/admiralui-ios.git', :branch => 'feature/TECH-fix-SPM-test-version'
 
 end
