--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -63,7 +63,7 @@ jobs:
         if: ${{ failure() }}
         run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
       - name: Validate Depenecy Managers
-        if: ${{ github.event_name == 'push'}}
+        if: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main' }}
         run: bundle exec fastlane validate_depenecy_managers
       - name: Check If Failed
         if: ${{ failure() }}
