--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -56,7 +56,7 @@ jobs:
         if: ${{ failure() }}
         run:  bundle exec fastlane send_build_failed_info issue_name:${{ github.head_ref }} telegram_token:"$TELEGRAM_API_TOKEN" telegram_chat_id:"$TELEGRAM_DEV_CHAT_ID" build_url:"$PUll_NUMBER"
 
-    ui-tests:
+    tests-admiral-ui:
         name: UI Test
         needs: snapshot-tests
         runs-on: [self-hosted, main]
